@@ -37,9 +37,6 @@ Minor changes:
  * Bring the scheme scripts in utils up to date with current versions
    of chicken scheme (The implementation of the language they're
    written for.) [SW]
- * @hook/list now shows error messages if you don't have permission to use
-   it, or if a command has no hooks, instead of failing silently. Suggested
-   by Padraic. [MG]
  * The test harness code strips trailing whitespace before attempting to match
    against expected results, making it easier to use bounded regexps. [SW]
  * @destination (for variable exits) is now a standard attribute, and has
@@ -53,6 +50,13 @@ Minor changes:
 Commands:
  * Added @mail/review for reading mail you've sent, and @mail/retract for
    deleting unread mail that you sent. Idea from MUX. Patch by Minion.
+ * @hook/list now shows error messages if you don't have permission to use
+   it, or if a command has no hooks, instead of failing silently. Suggested
+   by Padraic. [MG]
+
+Functions:
+ * Functions that take a sort type argument now accept 'mtime' for
+   sorting based on object's modification time. Patch by Minion.
 
 Fixes:
  * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
@@ -71,7 +75,9 @@ Fixes:
    or dbref. From report by Mouvar. [MG]
  * strreplace() was broken for overly long length arguments. Reported
    by Ashen-Shugar.  [SW]
- * Compile errors on Windows with OpenSSL. Reported by Daniko. 
+ * Compile errors on Windows with OpenSSL. Reported by Daniko.
+ * @uptime could report negative times for the first dump, purge, etc after
+   a game was started. Reported by Cooee. [MG]
 
 & 1.8.4p8
 Version 1.8.4 patchlevel 8                                 Nov 11, 2011
